--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.17.0",
     "bcrypt": "^5.1.1",
+    "classnames": "^2.5.1",
     "next": "13.5.6",
     "next-auth": "^4.24.7",
     "prisma": "^5.17.0",
