Build Create Issue API

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -286,5 +286,15 @@
     "wrap-regex": "error",
     "yield-star-spacing": "error",
     "yoda": ["error", "never"]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["schema.ts"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unsafe-assignment": "off",
+        "@typescript-eslint/no-unsafe-member-access": "off"
+      }
+    }
+  ]
 }
