--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.17.0",
+    "@radix-ui/themes": "^3.1.1",
     "bcrypt": "^5.1.1",
     "classnames": "^2.5.1",
     "next": "13.5.6",
