--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@radix-ui/themes": "^3.1.1",
     "bcrypt": "^5.1.1",
     "classnames": "^2.5.1",
+    "easymde": "^2.18.0",
     "next": "13.5.6",
     "next-auth": "^4.24.7",
     "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-simplemde-editor": "^5.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
