--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,12 @@
     ],
     "@typescript-eslint/no-confusing-void-expression": "off",
     "@typescript-eslint/no-invalid-void-type": "off",
+    "@typescript-eslint/no-misused-promises": [
+      "error",
+      {
+        "checksVoidReturn": false
+      }
+    ],
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/prefer-nullish-coalescing": "off",
