--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "migrate": "prisma migrate dev"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.17.0",
     "@radix-ui/themes": "^3.1.1",
