--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -295,7 +295,7 @@
   },
   "overrides": [
     {
-      "files": ["schema.ts"],
+      "files": ["*.schema.ts"],
       "rules": {
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-unsafe-assignment": "off",
