Add status badge

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@react-buddy/ide-toolbox-next": "^2.4.1",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
