--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "classnames": "^2.5.1",
+    "delay": "^6.0.0",
     "easymde": "^2.18.0",
     "next": "13.5.6",
     "next-auth": "^4.24.7",
