--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "skipDefaultLibCheck": false,
+    "skipDefaultLibCheck": true,
     "plugins": [
       {
         "name": "next"
