--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@react-buddy/ide-toolbox-next": "^2.4.1",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
