--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.1",
+    "@tanstack/react-query": "^5.51.14",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "classnames": "^2.5.1",
