--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,13 +6,21 @@
     "plugin:@typescript-eslint/stylistic-type-checked",
     "prettier"
   ],
-  "ignorePatterns": [".next", "next.config.js", "postcss.config.js"],
+  "ignorePatterns": [
+    ".next",
+    "next.config.js",
+    "postcss.config.js"
+  ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["prettier"],
+  "plugins": [
+    "prettier"
+  ],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": ["./tsconfig.json"]
+    "project": [
+      "./tsconfig.json"
+    ]
   },
   "rules": {
     "prettier/prettier": [
@@ -31,12 +39,12 @@
     ],
     "@typescript-eslint/consistent-indexed-object-style": "off",
     "@typescript-eslint/explicit-function-return-type": [
-        "error",
-        {
-            "allowExpressions": true
-//            "allowTypedFunctionExpressions": true,
-//            "allowHigherOrderFunctions": true
-        }
+      "error",
+      {
+        "allowExpressions": true
+        //            "allowTypedFunctionExpressions": true,
+        //            "allowHigherOrderFunctions": true
+      }
     ],
     "@typescript-eslint/no-confusing-void-expression": "off",
     "@typescript-eslint/no-invalid-void-type": "off",
@@ -68,7 +76,10 @@
     "brace-style": "off",
     "camelcase": "warn",
     "class-methods-use-this": "off",
-    "comma-dangle": ["error", "always-multiline"],
+    "comma-dangle": [
+      "error",
+      "always-multiline"
+    ],
     "comma-spacing": [
       "error",
       {
@@ -76,15 +87,24 @@
         "before": false
       }
     ],
-    "comma-style": ["error", "last"],
+    "comma-style": [
+      "error",
+      "last"
+    ],
     "complexity": "off",
-    "computed-property-spacing": ["error", "never"],
+    "computed-property-spacing": [
+      "error",
+      "never"
+    ],
     "consistent-return": "off",
     "consistent-this": "error",
     "default-case": "off",
     "default-case-last": "error",
     "default-param-last": "error",
-    "dot-location": ["error", "property"],
+    "dot-location": [
+      "error",
+      "property"
+    ],
     "dot-notation": [
       "off",
       {
@@ -153,7 +173,9 @@
     "no-empty-function": [
       "error",
       {
-        "allow": ["constructors"]
+        "allow": [
+          "constructors"
+        ]
       }
     ],
     "no-eq-null": "error",
@@ -189,7 +211,7 @@
     "no-new-wrappers": "error",
     "no-nonoctal-decimal-escape": "error",
     "no-octal-escape": "error",
-    "no-param-reassign": "error",
+    "no-param-reassign": "off",
     "no-plusplus": "off",
     "no-promise-executor-return": "error",
     "no-proto": "error",
@@ -216,7 +238,12 @@
     "no-unneeded-ternary": "error",
     "no-unreachable-loop": "error",
     "no-unsafe-optional-chaining": "error",
-    "no-unused-expressions": "error",
+    "no-unused-expressions": [
+      "error",
+      {
+        "allowShortCircuit": true
+      }
+    ],
     "no-use-before-define": "error",
     "no-useless-backreference": "error",
     "no-useless-call": "error",
@@ -236,7 +263,10 @@
     "no-whitespace-before-property": "error",
     "nonblock-statement-body-position": "error",
     "object-curly-newline": "error",
-    "object-curly-spacing": ["error", "always"],
+    "object-curly-spacing": [
+      "error",
+      "always"
+    ],
     "object-shorthand": "error",
     "one-var": "off",
     "one-var-declaration-per-line": "error",
@@ -271,7 +301,10 @@
     "rest-spread-spacing": "error",
     "semi": "error",
     "semi-spacing": "error",
-    "semi-style": ["error", "last"],
+    "semi-style": [
+      "error",
+      "last"
+    ],
     "sort-imports": "off",
     "sort-keys": "off",
     "sort-vars": "error",
@@ -280,8 +313,14 @@
     "space-in-parens": "off",
     "space-infix-ops": "error",
     "space-unary-ops": "error",
-    "spaced-comment": ["error", "always"],
-    "strict": ["error", "function"],
+    "spaced-comment": [
+      "error",
+      "always"
+    ],
+    "strict": [
+      "error",
+      "function"
+    ],
     "switch-colon-spacing": [
       "error",
       {
@@ -290,18 +329,29 @@
       }
     ],
     "symbol-description": "error",
-    "template-curly-spacing": ["error", "never"],
+    "template-curly-spacing": [
+      "error",
+      "never"
+    ],
     "template-tag-spacing": "error",
-    "unicode-bom": ["error", "never"],
+    "unicode-bom": [
+      "error",
+      "never"
+    ],
     "vars-on-top": "error",
     "wrap-iife": "error",
     "wrap-regex": "error",
     "yield-star-spacing": "error",
-    "yoda": ["error", "never"]
+    "yoda": [
+      "error",
+      "never"
+    ]
   },
   "overrides": [
     {
-      "files": ["*.schema.ts"],
+      "files": [
+        "*.schema.ts"
+      ],
       "rules": {
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-unsafe-assignment": "off",
