--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-simplemde-editor": "^5.2.0",
+    "recharts": "^2.13.0-alpha.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
