--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:root@localhost:3306/issue-tracker"
+NEXT_PUBLIC_APP_URL="mysql://root:root@localhost:3306/issue-tracker"
 
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET=""
 
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+
+SENTRY_AUTH_TOKEN=""
